--- a/tutorial/Adj_feature_preparation.ipynb
+++ b/tutorial/Adj_feature_preparation.ipynb
@@ -1078,6 +1078,147 @@
     "node_feature = node_feature_matirx.iloc[:,1:]\n",
     "np.savetxt((os.path.join(path, \"annotation\", \"node_feature.csv\")), node_feature, delimiter=',')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create MATLAB data files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd \n",
+    "import numpy as np\n",
+    "import scipy.sparse as sp\n",
+    "import scipy\n",
+    "import scipy.io as sio\n",
+    "import scipy.sparse as sp\n",
+    "\n",
+    "def read_dataset(data):\n",
+    "    #data = sio.loadmat(os.path.join('data', f'{dataset}.mat'))\n",
+    "    features = data['fea'].astype(float)\n",
+    "    adj = data['W']\n",
+    "    adj = adj.astype(float)\n",
+    "    if not sp.issparse(adj):\n",
+    "        adj = sp.csc_matrix(adj)\n",
+    "    if sp.issparse(features):\n",
+    "        features = features.toarray()\n",
+    "    labels = data['gnd'].reshape(-1) - 1\n",
+    "    n_classes = len(np.unique(labels))\n",
+    "    return adj, features, labels, n_classes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Although the current unsupervised algorithm is not designed to optimize for accuracy, it still calculates accuracy as a reference metric. To avoid potential errors, we will generate random labels for the evaluation process."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "(3594, 3594)\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = \"/Users/ninasong/Desktop/spatialProject/literature_model/graph_convolutional_clustering/unsupervised-GCN/FFD1/\"\n",
+    "\n",
+    "#node = np.genfromtxt((os.path.join(path, \"annotation\", \"node_feature.csv\")), delimiter=',')\n",
+    "#adj = np.genfromtxt((os.path.join(path, \"annotation\", \"adj.csv\")), delimiter=',')\n",
+    "\n",
+    "node = node_feature\n",
+    "adj = adj\n",
+    "\n",
+    "# generate random labels\n",
+    "na_array = np.random.randint(6, size = node.shape[0])\n",
+    "\n",
+    "#print(\"Node features:\\n\", node_feats)\n",
+    "print(node.shape[1])\n",
+    "print(adj.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "csr_matrix is a compressed sparse row matrix format in Python's scipy.sparse module. It is a data structure is required in this tutorial, that is used to represent large, sparse matrices efficiently, where most of the elements are zero.\n",
+    "\n",
+    "In a csr_matrix, the non-zero values are stored in three arrays:\n",
+    "\n",
+    "1. The data array, which stores the non-zero values of the matrix in row-major order.\n",
+    "2. The indices array, which stores the column index of each non-zero value in the data array.\n",
+    "3. The indptr array, which stores the starting and ending indices of the non-zero values for each row in the data array.\n",
+    "\n",
+    "Using this format, a sparse matrix can be represented efficiently in memory, and matrix operations can be performed efficiently without needing to store all the zeros in the matrix."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.sparse import csr_matrix\n",
+    "\n",
+    "adj_sparse_matrix = csr_matrix(adj)\n",
+    "node_sparse_matrix = csr_matrix(node)\n",
+    "na_array = np.random.randint(low = 1, high = 11, size=node.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the file name for your .mat file\n",
+    "filename = 'FFD1.mat'\n",
+    "\n",
+    "# Save the arrays to the .mat file\n",
+    "scipy.io.savemat(filename, {'W': adj_sparse_matrix, 'fea': node_sparse_matrix, 'gnd': na_array})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'__header__': b'MATLAB 5.0 MAT-file Platform: posix, Created on: Tue Mar 14 23:34:30 2023',\n",
+       " '__version__': '1.0',\n",
+       " '__globals__': [],\n",
+       " 'W': <3594x3594 sparse matrix of type '<class 'numpy.float64'>'\n",
+       " \twith 7535277 stored elements in Compressed Sparse Column format>,\n",
+       " 'fea': <3594x12 sparse matrix of type '<class 'numpy.float64'>'\n",
+       " \twith 43128 stored elements in Compressed Sparse Column format>,\n",
+       " 'gnd': array([[ 8,  4, 10, ...,  6,  2,  5]])}"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat = scipy.io.loadmat(filename)\n",
+    "mat"
+   ]
   }
  ],
  "metadata": {
