--- a/tutorial/Adj_feature_preparation.ipynb
+++ b/tutorial/Adj_feature_preparation.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Read in data\n",
-    "In this tutorial, it required three input data:\n",
+    "In this tutorial, it required four input data:\n",
     "\n",
     "1. \"resnet_array.npy\": a matrix of image features for each spot that extract from ResNet50\n",
     "2. \"filtered_feature_bc_matrix.h5\": The gene expression matrix\n",
@@ -784,6 +784,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The feature matrix, consisting of the top 2 image features and the top 10 gene expression principal components, was combined with the gene expression matrix. The resulting matrix was processed using scanpy adata, with counts per cell normalized and logarithmic transformation applied. The top 10 principal components were retained for subsequent analysis."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -853,35 +860,6 @@
     "sc.pp.normalize_total(adata, target_sum=1e4)\n",
     "# Log-transform the data\n",
     "sc.pp.log1p(adata)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['AAACAAGTATCTCCCA-1', 'AAACACCAATAACTGC-1', 'AAACAGAGCGACTCCT-1',\n",
-       "       'AAACAGCTTTCAGAAG-1', 'AAACAGGGTCTATATT-1', 'AAACAGTGTTCCTGGG-1',\n",
-       "       'AAACATTTCCCGGATT-1', 'AAACCCGAACGAAATC-1', 'AAACCGGGTAGGTACC-1',\n",
-       "       'AAACCGTTCGTCCAGG-1',\n",
-       "       ...\n",
-       "       'TTGTGTATGCCACCAA-1', 'TTGTGTTTCCCGAAAG-1', 'TTGTTAGCAAATTCGA-1',\n",
-       "       'TTGTTCAGTGTGCTAC-1', 'TTGTTCTAGATACGCT-1', 'TTGTTGTGTGTCAAGA-1',\n",
-       "       'TTGTTTCACATCCAGG-1', 'TTGTTTCATTAGTCTA-1', 'TTGTTTCCATACAACT-1',\n",
-       "       'TTGTTTGTATTACACG-1'],\n",
-       "      dtype='object', length=3594)"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.index"
    ]
   },
   {
