--- a/tutorial/Adj_feature_preparation.ipynb
+++ b/tutorial/Adj_feature_preparation.ipynb
@@ -10,7 +10,7 @@
     "1. \"resnet_array.npy\": a matrix of image features for each spot that extract from ResNet50\n",
     "2. \"filtered_feature_bc_matrix.h5\": The gene expression matrix\n",
     "3. \"tissue_positions_list.csv\": Spatial coordinateds \n",
-    "4. \"image\" folder: contains cropped image for each spot\n",
+    "4. \"image_label_id\": contains cropped image names, such as `6740_3780.jpg` for each spot. It is aligned with the order of resnet_array.npy.\n",
     "\n",
     "The gene expreesion data can be stored as an AnnData object. AnnData stores a data matrix .X together with annotations of observations .obs and variables .var \n",
     "\n",
@@ -95,7 +95,7 @@
     "resne_fea = pca.fit_transform(array_normalized)\n",
     "top2_resnet = pd.DataFrame(resne_fea)\n",
     "\n",
-    "top2_resnet.to_csv((os.path.join(path, \"annotation\", \"top2_resetnet_feature.csv\")), index=False)"
+    "#top2_resnet.to_csv((os.path.join(path, \"annotation\", \"top2_resetnet_feature.csv\")), index=False)"
    ]
   },
   {
@@ -1196,6 +1196,184 @@
    "source": [
     "mat = scipy.io.loadmat(filename)\n",
     "mat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Post processing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The results obtained from the GCN model, `pred_label_only.csv` will be stored in `FFDA/annotation` folder. This section will combine the predict label with barcode, form the similar format of `tissue_position.csv`, thereby enabling its future utilization in visualizations via R studio."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>barcode</th>\n",
+       "      <th>cluster</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>TAAGTAAATGTGCCGC-1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>TGGCACGAGCTCGAGT-1</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ACCGGTCTGAGTACGG-1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              barcode  cluster\n",
+       "0  TAAGTAAATGTGCCGC-1        0\n",
+       "1  TGGCACGAGCTCGAGT-1        7\n",
+       "2  ACCGGTCTGAGTACGG-1        0"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "label_table = pd.read_csv(os.path.join(path, \"annotation\", \"pred_label_only.csv\"), sep=',',header = None)\n",
+    "\n",
+    "#feature_table\n",
+    "image_ids = pd.DataFrame(n)\n",
+    "cluster_label = pd.concat([node_feature_matirx, label_table], axis=1, ignore_index=True)\n",
+    "cluster_label = cluster_label.iloc[:, [0, -1]]\n",
+    "cluster_label.rename( columns={0 :'barcode', cluster_label.columns[-1]:'cluster'}, inplace=True )\n",
+    "#cluster_label = cluster_label[[\"barcode\", \"cluster\"]]\n",
+    "#cluster_label['cluster'] = cluster_label['cluster'].str.replace(r'\\D', '').astype(int)\n",
+    "cluster_label.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>barcode</th>\n",
+       "      <th>tissue</th>\n",
+       "      <th>row</th>\n",
+       "      <th>col</th>\n",
+       "      <th>imagerow</th>\n",
+       "      <th>imagecol</th>\n",
+       "      <th>cluster</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ACGCCTGACACGCGCT-1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1111.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>TACCGATCCAACACTT-1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1213.0</td>\n",
+       "      <td>1059.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ATTAAAGCGGACGAGC-1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1111.0</td>\n",
+       "      <td>1118.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              barcode  tissue  row  col  imagerow  imagecol  cluster\n",
+       "0  ACGCCTGACACGCGCT-1     0.0  0.0  0.0    1111.0    1000.0      NaN\n",
+       "1  TACCGATCCAACACTT-1     0.0  1.0  1.0    1213.0    1059.0      NaN\n",
+       "2  ATTAAAGCGGACGAGC-1     0.0  0.0  2.0    1111.0    1118.0      NaN"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tissue_position = pd.read_csv((os.path.join(path, \"spatial\", \"tissue_positions_list.csv\")), sep=',', names=[\"barcode\", \"tissue\", \"row\", \"col\",\"imagerow\", \"imagecol\"])\n",
+    "merge = tissue_position.merge(cluster_label, how = 'outer', on = \"barcode\")\n",
+    "merge.to_csv(os.path.join(path, \"annotation\", \"pred_label_for_visualization.csv\"), sep = ',', index=False, header = None)\n",
+    "merge.head(3)"
    ]
   }
  ],
